-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.8.0
-
3
-
9223372036854775807
When we enabled GCOV Lustre source should be compiled without optimization. Getting below error while executing llmount.sh
[root@fre0138 lustre-wc-rel]# sh lustre/tests/llmount.sh Stopping clients: fre0138 /mnt/lustre (opts:) Stopping clients: fre0138 /mnt/lustre2 (opts:) Loading modules from /home/mpiuser/master/lustre-wc-rel/lustre/tests/.. detected 2 online CPUs by sysfs Force libcfs to create 2 CPU partitions ../libcfs/libcfs/libcfs options: 'cpu_npartitions=2' debug=vfstrace rpctrace dlmtrace neterror ha config ioctl super lfsck subsystem_debug=all -lnet -lnd -pinger ../lnet/lnet/lnet options: 'accept=all' ../lnet/klnds/socklnd/ksocklnd options: 'sock_timeout=10' insmod: error inserting '/home/mpiuser/master/lustre-wc-rel/lustre/tests/../ptlrpc/ptlrpc.ko': -1 Unknown symbol in module [root@fre0138 lustre-wc-rel]# [root@fre0138 lustre-wc-rel]#