LU-7515 obdclass: add export for lprocfs_stats_alloc_one()

When compiling Lustre without optimization, when using GCOV,
the lprocfs_stats_alloc_one() symbol is not properly exported to
other modules and causes the ptlrpc module to fail loading with
an unknown symbol.
Added EXPORT_SYMBOL(lprocfs_stats_alloc_one) so that this works
properly.

This patch is back-ported from the following one:
Lustre-commit: dbc0d90ba951482944ea4378dacac7bc25b0c335
Lustre-change: http://review.whamcloud.com/17443

Seagate-bug-id: MRP-3188
Signed-off-by: Chennaiah Palla <chennaiah.palla@seagate.com>
Signed-off-by: Emoly Liu <emoly.liu@intel.com>
Change-Id: Ie3abacf2135dec8cb3e0b2fa96373fb81c9722fa
Reviewed-on: http://review.whamcloud.com/20213
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Bobi Jam <bobijam@hotmail.com>
Reviewed-by: Bob Glossman <bob.glossman@intel.com>
Reviewed-by: John L. Hammond <john.hammond@intel.com>